docs/5.3/modules/en/pages/ibmsa.adoc
= IBM Security Advisor
:revdate: 2024-09-27
:page-revdate: {revdate}
:page-opendocs-origin: /08.integration/09.ibmsa/09.ibmsa.md
:page-opendocs-slug:  /integration/ibmsa

[#_integrating-with-ibm-security-advisor]
== Integrating with IBM Security Advisor

{product-name} Integrates with IBM Security Advisor on IBM Cloud.

To generate the registration URL required, please log into the {product-name} console as an administrator and go to Settings -> Configuration.

. Enable "Integrate with IBM Security Advisor" -> Submit
. Click "Get URL" -> Copy to clipboard

image:ibmsa_config_new.png[ibmconfigure]

Then return to the IBM Security Advisor console, and under "Enter the {product-name} setup URL", type in "https://{{product-name} controller hostname/ip}:\{port}" and paste what is copied in from the steps above. For the port, use the exposed {product-name} REST API port (default is 10443). For multi-cluster environments this is also the 'fed-worker' service which exposes this port.

IBM Security Advisor will communicate with your {product-name} cluster controller thru the provided hostname or IP. Note: This may need to be exposed as a service for access from outside the Kubernetes cluster, similar to how the REST API is exposed as a service.

[#_verifying-the-connection]
=== Verifying the Connection

When the connection is successfully created between IBM Security Advisor & {product-name}, you will see the green "Connected at {date, time}" icon next to "Integrate with IBM Security Advisor" in the {product-name} Console.

image:ibmsa_connected.png[connected]

[#_reviewing-security-events-in-ibm-security-advisor]
=== Reviewing Security Events in IBM Security Advisor

A summary card with security event information is displayed.

image:ibm_sa_threat_summary.png[threats]

Each security event can be investigated in more detail, as shown below:

image:ibm_sa_findings.png[findings]

[#_removing-the-integration]
== Removing the Integration

If you delete a {product-name} integration connection in your IBM Cloud account, remember to also disable the "IBM SA integration" for that {product-name} cluster in Settings -> Configuration.
